--- a/users/templates/resume-detail.html
+++ b/users/templates/resume-detail.html
@@ -10,8 +10,8 @@
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Profile Bootstrap Theme</title>
-
+    <title>Resume {{ object.user.first_name }} {{ object.user.last_name }}</title>
+     {% comment %} we are doing object.user.first_name because this is how it happens for class based views{% endcomment %}
     <!-- Global stylesheets -->
     <link href="{% static 'app/css/bootstrap/bootstrap.min.css' %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -134,11 +134,11 @@
               <div class="resume-item col-md-6 col-sm-12 " > 
                 <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class=" resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Senior Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> {{ object.date_birth }}</h4>
+                      <p>{{ object.ethnicity }}</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">March 2019 - Present</span>
+                      <span class="text-primary">{{ object.last_updated }}</span>
                   </div>
                 </div>  
               </div>
@@ -146,7 +146,7 @@
                 <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
                       <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <p>{{ object.cover_letter }}</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">December 2018 - March 2019</span>
@@ -157,7 +157,7 @@
                 <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
                       <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Junior Web Designer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <p>{{ object.suburb }}</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">July 2017 - December 2018</span>
@@ -168,7 +168,7 @@
                 <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
                       <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> Web Design Intern</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <p>{{ object.addressLine2 }}</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">September 2018 - June 2019</span>
@@ -345,7 +345,7 @@
                           <span class="date">Apr 2017 - Mar 2018</span>
                           <h5 class="title">Google Analytics Certified Developer</h5>
                           <p class="description">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
+                            {{ object.city }}
                           </p>
                       </div>
                   </div>
@@ -355,7 +355,7 @@
                           <span class="date">Apr 2018 - Mar 2019</span>
                           <h5 class="title">Mobile Web Specialist - Google Certification</h5>
                           <p class="description">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
+                            {{ object.province }}
                           </p>
                       </div>
                   </div>
@@ -372,7 +372,7 @@
               <div class="contact-cont">
                 <h3>CONTACT Us</h3>
                 <div class="heading-border-light"></div>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here.</p>
+                <p>{{ object.phoneNumber }}</p>
               </div>   
               <div class="row con-form">
                 <div class="col-md-12">
