--- a/jobWebsite/templates/layout1.html
+++ b/jobWebsite/templates/layout1.html
@@ -95,7 +95,21 @@
     </header>
 
     <!-- HOME -->
-   
+   {% if messages %}
+   {% for message in messages %}
+
+   {% if message.tags == 'error' %}
+  <div class = 'alert alert-danger'>
+   {{ message }}
+  </div>
+  {% else %}
+  <div class = 'alert alert-{{ message.tags }}'>
+   {{ message }}
+  </div>
+  {% endif %}
+
+  {% endfor %}
+  {% endif %}
 
         {% block section %}
         {% endblock %}
