--- a/jobs/templates/top_bar.html
+++ b/jobs/templates/top_bar.html
@@ -5,21 +5,7 @@
             <div class="col-md-7">
                 <ul class="list-inline mb-0 text-center text-md-start">
                     <li class="list-inline-item">
-                        <p class="fs-13 mb-0"> <i class="mdi mdi-map-marker"></i> Your Location: <a href="javascript:void(0)" class="text-dark">New Caledonia</a></p>
-                    </li>
-                    <li class="list-inline-item">
-                        <ul class="topbar-social-menu list-inline mb-0">
-                            <li class="list-inline-item"><a href="javascript:void(0)" class="social-link"><i
-                                        class="uil uil-whatsapp"></i></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)" class="social-link"><i
-                                        class="uil uil-facebook-messenger-alt"></i></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)" class="social-link"><i
-                                        class="uil uil-instagram"></i></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)" class="social-link"><i
-                                        class="uil uil-envelope"></i></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)" class="social-link"><i
-                                        class="uil uil-twitter-alt"></i></a></li>
-                        </ul>
+                        <p class="fs-13 mb-0"> <i class="mdi mdi-map-marker"></i> Your Location: <a href="javascript:void(0)" class="text-dark">{{user_country}}</a></p>
                     </li>
                 </ul>
             </div>
