--- a/jobs/templates/contact.html
+++ b/jobs/templates/contact.html
@@ -49,16 +49,7 @@
             </section>
             <!-- end home -->
 
-            <!-- START SHAPE -->
-            <div class="position-relative" style="z-index: 1">
-                <div class="shape">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
-                        <path fill="#FFFFFF" fill-opacity="1"
-                            d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
-                    </svg>
-                </div>
-            </div>
-            <!-- END SHAPE -->
+            {% include 'sections/Home/shape.html' %}
 
 
             <!-- START CONTACT-PAGE -->
@@ -109,7 +100,7 @@
                         </div><!--end col-->
                         <div class="col-lg-5 ms-auto order-first order-lg-last">
                             <div class="text-center">
-                                <img src="assets/images/contact.png" alt="" class="img-fluid">
+                                <img src="{% static 'assets/images/contact.png' %}" alt="" class="img-fluid">
                             </div>
                             <div class="mt-4 pt-3">
                                 <div class="d-flex text-muted align-items-center mt-2">
