--- a/jobs/templates/nav_bar.html
+++ b/jobs/templates/nav_bar.html
@@ -1,4 +1,46 @@
 {% load static %}
+<!-- START TOP-BAR -->
+<div class="top-bar">
+    <div class="container-fluid custom-container">
+        <div class="row g-0 align-items-center">
+            <div class="col-md-7">
+                <ul class="list-inline mb-0 text-center text-md-start">
+                    <li class="list-inline-item">
+                        <p class="fs-13 mb-0"> <i class="mdi mdi-map-marker"></i> Your Location: <a href="javascript:void(0)" class="text-dark">{{user_country}}</a></p>
+                    </li>
+                </ul>
+            </div>
+            <!--end col-->
+            <div class="col-md-5">
+                <ul class="list-inline mb-0 text-center text-md-end">
+                    <li class="list-inline-item py-2 me-2 align-middle">
+                        <a href="#signupModal" class="text-dark fw-medium fs-13" data-bs-toggle="modal"><i class="uil uil-lock"></i>
+                            Sign Up</a>
+                    </li>
+                    <li class="list-inline-item align-middle">
+                        <div class="dropdown d-inline-block language-switch">
+                            <button type="button" class="btn" data-bs-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                <img id="header-lang-img" src="{% static 'assets/images/flags/us.jpg' %}" alt="Header Language" height="16" />
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-end">
+                                <!-- item-->
+                                <a href="javascript:void(0);" class="dropdown-item notify-item language" data-lang="eng">
+                                    <img src="{% static 'assets/images/flags/us.jpg' %}" alt="user-image" class="me-1" height="12" />
+                                    <span class="align-middle">English</span>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <!--end col-->
+        </div>
+        <!--end row-->
+    </div>
+    <!--end container-->
+</div>
+<!-- END TOP-BAR -->
 <!--Navbar Start-->
 <nav class="navbar navbar-expand-lg fixed-top sticky" id="navbar">
     <div class="container-fluid custom-container">
