--- a/jobs/templates/sections/Home/cta.html
+++ b/jobs/templates/sections/Home/cta.html
@@ -9,7 +9,7 @@
                     <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with
                         the right freelancers.</p>
                     <div class="mt-4 pt-2">
-                        <a href="javascript:void(0)" class="btn btn-primary btn-hover">Started Now <i class="uil uil-rocket align-middle ms-1"></i></a>
+                        <a href="{% url 'job_search' %}" class="btn btn-primary btn-hover">Started Now <i class="uil uil-rocket align-middle ms-1"></i></a>
                     </div>
                 </div>
             </div><!--end col-->
