--- a/jobs/templates/sections/Home/footer.html
+++ b/jobs/templates/sections/Home/footer.html
@@ -72,8 +72,8 @@
                             <div class="col-lg-12">
                                 <p class="text-white-50 text-center mb-0">
                                     <script>document.write(new Date().getFullYear())</script> &copy; Jobcy - Job Listing Page
-                                    Template by <a href="https://themeforest.net/search/themesdesign" target="_blank"
-                                        class="text-reset text-decoration-underline">Themesdesign</a>
+                                    Template by <a href="" target="_blank"
+                                        class="text-reset text-decoration-underline">Kavay</a>
                                 </p>
                             </div><!--end col-->
                         </div><!--end row-->
