--- a/jobs/templates/sections/Home/job_list.html
+++ b/jobs/templates/sections/Home/job_list.html
@@ -91,7 +91,7 @@
                         <!--end job-box-->
                     {% endfor %}
                     <div class="text-center mt-4 pt-2">
-                        <a href="job-list.html" class="btn btn-primary">View More <i class="uil uil-arrow-right"></i></a>
+                        <a href="{% url 'job_search' %}" class="btn btn-primary">View More <i class="uil uil-arrow-right"></i></a>
                     </div>
                 </div>
             </section> 
