edited home page category section

--- a/jobs/templates/sections/Home/category.html
+++ b/jobs/templates/sections/Home/category.html
@@ -4,15 +4,16 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
-                    <h3 class="title">Browser Jobs Categories </h3>
-                    <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with the
-                        right freelancers.</p>
+                    <h3 class="title">Search Jobs Database </h3>
+                    <p class="text-muted">Make use of our jobs databases. We'll quickly provide you with the
+                        right jobs for you.</p>
                 </div>
             </div>
             <!--end col-->
         </div>
         <!--end row-->
-        <div class="row">
+        {% comment %} <div class="row"> {% endcomment %}
+            {% comment %} {% for job_Categories in  %}{% endfor %}
             <div class="col-lg-3 col-md-6 mt-4 pt-2">
                 <div class="popu-category-box rounded text-center">
                     <div class="popu-category-icon icons-md">
@@ -27,110 +28,12 @@
                 </div><!--end popu-category-box-->
             </div>
             <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-airplay"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Technology</h5>
-                        </a>
-                        <p class="text-muted mb-0">1250 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-bag"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Government</h5>
-                        </a>
-                        <p class="text-muted mb-0">802 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-user-md"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Accounting / Finance</h5>
-                        </a>
-                        <p class="text-muted mb-0">577 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-hospital"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Construction / Facilities</h5>
-                        </a>
-                        <p class="text-muted mb-0">285 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-telegram-alt"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Tele-communications</h5>
-                        </a>
-                        <p class="text-muted mb-0">495 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-scenery"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Design & Multimedia</h5>
-                        </a>
-                        <p class="text-muted mb-0">1045 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-            <div class="col-lg-3 col-md-6 mt-4 pt-2">
-                <div class="popu-category-box rounded text-center">
-                    <div class="popu-category-icon icons-md">
-                        <i class="uim uim-android-alt"></i>
-                    </div>
-                    <div class="popu-category-content mt-4">
-                        <a href="job-categories.html" class="text-dark stretched-link">
-                            <h5 class="fs-18">Human Resource</h5>
-                        </a>
-                        <p class="text-muted mb-0">1516 Jobs</p>
-                    </div>
-                </div><!--end popu-category-box-->
-            </div>
-            <!--end col-->
-        </div>
+        </div> {% endcomment %}
         <!--end row-->
         <div class="row">
             <div class="col-lg-12">
                 <div class="mt-5 text-center">
-                    <a href="job-categories.html" class="btn btn-primary btn-hover">Browse All Categories <i class="uil uil-arrow-right ms-1"></i></a>
+                    <a href="{% url 'job_search' %}" class="btn btn-primary btn-hover">Click To Search<i class="uil uil-arrow-right ms-1"></i></a>
                 </div>
             </div><!--end col-->
         </div><!--end row-->
