--- a/jobs/templates/nav_bar.html
+++ b/jobs/templates/nav_bar.html
@@ -61,7 +61,7 @@
                         Home <div class="arrow-down"></div>
                     </a>
                 </li>
-                <li class="nav-item dropdown dropdown-hover">
+                {% comment %} <li class="nav-item dropdown dropdown-hover">
                     <a class="nav-link" href="javascript:void(0)" id="jobsdropdown" role="button" data-bs-toggle="dropdown">
                         Company <div class="arrow-down"></div>
                     </a>
@@ -73,7 +73,7 @@
                         <a class="dropdown-item" href="privacy-policy.html">Priacy & Policy</a>
                         <li><a class="dropdown-item" href="faqs.html">Faqs</a></li>
                     </ul>
-                </li>
+                </li> {% endcomment %}
                 <li class="nav-item">
                     <a href="{% url 'contact' %}" class="nav-link">Contact</a>
                 </li>
