--- a/jobs/templates/home.html
+++ b/jobs/templates/home.html
@@ -4,7 +4,7 @@
 
 
 {% block page-content %}
-      {% include 'sections/Home/home.html' %}
+      {% include 'sections/Home/home.html' with listing_filter=listing_filter only %}
       {% include 'sections/Home/shape.html' %}
       {% include 'sections/Home/category.html' %}
       {% include 'sections/Home/job_list.html' %}
