removed unnecessary stuffs in footer.html

--- a/jobs/templates/sections/Home/footer.html
+++ b/jobs/templates/sections/Home/footer.html
@@ -16,7 +16,7 @@
                                     </ul>
                                 </div>
                             </div><!--end col-->
-                            <div class="col-lg-2 col-6">
+                            {% comment %} <div class="col-lg-2 col-6">
                                 <div class="footer-item mt-4 mt-lg-0">
                                     <p class="fs-16 text-white mb-4">Company</p>
                                     <ul class="list-unstyled footer-list mb-0">
@@ -60,7 +60,7 @@
                                     </ul>
                                 </div>
                             </div><!--end col-->
-                        </div><!--end row-->
+                        </div><!--end row--> {% endcomment %}
                     </div><!--end container-->
                 </section>
                 <!-- END FOOTER -->
