fixed icons not showing

--- a/jobs/templates/base.html
+++ b/jobs/templates/base.html
@@ -25,6 +25,10 @@
             <link href="{% static 'assets/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
             <!-- App Css-->
             <link href="{% static 'assets/css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.5.55/fonts/materialdesignicons-webfont.woff2" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.5.55/css/materialdesignicons.min.css" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.5.55/fonts/materialdesignicons-webfont.woff" rel="stylesheet">
         {% endblock styles %}
 
     </head>
